--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
+  <title>Pomodoro Zamanlayıcı</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
