--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <meta property="og:title" content="Pomodoro Timer" />
+  <meta property="og:description" content="Minimal, Notion-compatible Pomodoro Timer" />
+  <meta property="og:url" content="https://yusufsmsk.github.io/pomodoro/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://yusufsmsk.github.io/pomodoro/preview.png" />
   <meta charset="UTF-8" />
   <title>Pomodoro Zamanlayıcı</title>
   <link rel="stylesheet" href="style.css" />
