--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:description" content="Minimal, Notion-compatible Pomodoro Timer" />
   <meta property="og:url" content="https://yusufsmsk.github.io/pomodoro/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://yusufsmsk.github.io/pomodoro/preview.png" />
+  <meta property="og:image" content="https://yusufsmsk.github.io/pomodoro/ZAPb&w512x512.png" />
   <meta charset="UTF-8" />
   <title>Pomodoro Zamanlayıcı</title>
   <link rel="stylesheet" href="style.css" />
